Fixed tag spacing

--- a/css-files/home-style.css
+++ b/css-files/home-style.css
@@ -504,6 +504,7 @@ body.light-mode .divider {
 
 .tag {
     margin-right: 6px;
+    margin-top: 1px;
 }
 
 .text-tag {
